# news

./: .gitignore  .sample.env  2024-01-January.html  2024-02-February.html  Cargo.toml  README.md  _config.yaml  devlog.md  eleventy.config.js  index.html  mailer.py  newsletter_mailer.py  package.json  pnpm-lock.yaml  pyproject.toml  server.rs
.github/workflows/: 11ty-gh-pages.yml
_ posts/: 2024-02-01-March-2024.html
_posts/: 2023-03-01-March.html  2023-08-01-August.txt  2023-11-01-November.html  2024-01-01-January.html  2024-02-01-February.html  2024-02-February.html  2024-03-01-March  2024-03-01-March.html  2024-04-01-April.html  2024-08-01-August.html  2024-09-01-September.html
_posts/2023/: 2023-09-01-September.txt
_posts/2024/: 2024-08-01-August.html  2024-09-01-September.html  2024-10-01-October.html  2024-10-01-October.mjml
src/: index.liquid
src/2023/: 2023-08-01-August.md  2023-09-01-September.md  2023-10-01-October.md  2023-11-01-November.docx  2023-11-01-November.html  2023-12-01-December.md
src/2024/: 2024-01-01-January.html  2024-02-01-February.html  2024-03-01-March.html  2024-04-01-April.html  2024-08-01-August.html  2024-09-01-September.html
src/2024/Dec/: 2024-12-01-December.mjml
src/2024/Nov/: 2024-11-01-November.mjml  2024-11-01.mjml
src/2024/Oct/: 2024-10-01-October.mjml
src/2025/02 Feb/: 2025-02-01-February.liquid
src/2025/03 Mar/: 2025-03-01-March.liquid
src/2025/04 Apr/: 2025-04-01-April.liquid
src/2025/08 Aug/: 2025-08-01-August.liquid
src/2025/09 Sep/: 2025-09-01-September.liquid  resume.docx
(+8 files in other folders)
