[project]
name = "news"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ethan Dawes", email = "ethand.python@gmail.com"},
]
dependencies = ["requests>=2.32.5", "dotenv>=0.9.9", "tqdm>=4.67.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
